--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,20 @@
 
 /* main */
 .hero {
-    margin-top: 113px;
-    margin-bottom: 106px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 113px auto 106px;
     display: flex;
+    justify-content: space-between;
     align-items: end;
     gap: 294px;
     width: 1778px;
-    height: 816px;
+    max-width: 100%;
+    max-height: 816px;
     border-radius: 24px;
     padding-bottom: 89px;
     padding-right: 332px;
     padding-left: 51px;
     background-image: url("./images/background-img.jpg");
+    aspect-ratio: 2.17;
 }
 
 .hero-container {
@@ -87,10 +87,12 @@
 /* ABOUT SCOUTS */
 .about-scouts {
     position: relative;
-    width: 1778px;
+    width: 100%;
     height: 860px;
+    margin-bottom: 100px;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .about-scouts-block {
@@ -136,12 +138,14 @@
 }
 
 .about-scouts-cards-list {
-    position: absolute;
-    z-index: 10;
-    top: 383px;
-    left: 153px;
+    /*position: absolute;*/
+    /*z-index: 10;*/
+    /*top: 383px;*/
+    /*left: 153px;*/
     display: flex;
     gap: 24px;
+    margin-top: -213px;
+    justify-content: center;
 }
 
 .about-scouts-card {
@@ -220,10 +224,12 @@
     margin-bottom: 72px;
     border-radius: 24px;
     overflow: hidden;
+    max-width: 100%;
 }
 
 .main-iformation-block {
     display: flex;
+    max-width: 100%;
     width: 1564px;
     justify-content: space-around;
 }
@@ -254,8 +260,9 @@
     /* margin-left: auto;
     margin-right: auto; */
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    justify-content: center;
 }
 
 .events-title {
@@ -263,11 +270,16 @@
     text-align: center;
 }
 
+.AAA{
+    max-width: 100%;
+    width: 1558px;
+}
+
 .events-list {
     display: flex;
-    gap: 40px;
-    width: 1558px;
-    justify-content: center;
+    /*gap: 40px;*/
+    width:100%;
+    justify-content: space-between;
     margin-bottom: 100px;
 }
 
@@ -280,6 +292,7 @@
     border-radius: 20px;
     background-color: rgb(245, 245, 245);
     padding: 40px 16px;
+    max-width: 25%;
 }
 
 .events-item-title {
